deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      volumes:
        - name: html
          configMap:
            name: nginx-index
        - name: conf
          configMap:
            name: nginx-conf
      containers:
        - name: nginx
          image: nginx:1.27
          ports:
            - containerPort: 80
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: conf
              mountPath: /etc/nginx/conf.d
        - name: exporter
          image: nginx/nginx-prometheus-exporter:1.3.0
          args:
            - --nginx.scrape-uri=http://localhost:8080/stub_status
          ports:
            - containerPort: 9113
              name: metrics
